--- a/Fekrah/API/ClientApp/src/app/core/features/parts/brand-parts/brand-parts.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/parts/brand-parts/brand-parts.component.html
@@ -58,8 +58,16 @@
   </div>
 
   <div class="parts-grid" *ngIf="pagedParts.length > 0 && !isLoading">
-    <app-card *ngFor="let part of pagedParts; trackBy: trackByPartId" [part]="part" (partClick)="onPartClick($event)">
-    </app-card>
+    <!-- <app-card *ngFor="let part of pagedParts; trackBy: trackByPartId" [part]="part" (partClick)="onPartClick($event)">
+    </app-card> -->
+
+    <app-card 
+  *ngFor="let part of pagedParts; trackBy: trackByPartId"
+  [part]="part"
+  (addToCart)="onAddToCart($event)"
+  (favoriteToggled)="onFavoriteToggled($event)">
+</app-card>
+
   </div>
 
   <div class="no-results" *ngIf="displayParts.length === 0 && !isLoading">
