--- a/Fekrah/API/ClientApp/src/app/core/features/parts/part-details/part-details.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/parts/part-details/part-details.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb>
+<!-- <app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb> -->
 
 
 <section class="container py-5">
