--- a/Fekrah/API/ClientApp/src/app/core/features/parts/brand-parts/brand-parts.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/parts/brand-parts/brand-parts.component.scss
@@ -425,7 +425,7 @@ $orange-medium: #ffb74d; // برتقالي متوسط
   // margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: center;
   gap: 20px;
 }
 
