--- a/Fekrah/API/ClientApp/src/app/core/features/home/suggested-offers/suggested-offers.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/suggested-offers/suggested-offers.component.html
@@ -3,7 +3,7 @@
 
   <div class="swiper-container suggested-offers-swiper" dir="ltr">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" *ngFor="let part of pagedParts; trackBy: trackByPartId">
+      <div class="swiper-slide" *ngFor="let part of carPartsSample; trackBy: trackByPartId">
         <app-card
           [part]="part"
           (addToCart)="onAddToCart($event)"
